fix to correct alignment

--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -95,6 +95,7 @@ strong {
 		padding: 4px 4px;
 		border-radius:4px;
 		color:white;
+		margin-right:3px;
 	}
 
 	.tag-everything {
